Menambahkan gambar profil responsif di halaman index.html dan menyembunyikan ikon timeline pada tampilan mobile melalui pembaruan CSS.

--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,10 @@
     border-left: 16px solid #fff !important;
     border-right: none !important;
   }
+  /* Sembunyikan icon timeline di mobile */
+  .timeline-icon-center.small {
+    display: none !important;
+  }
 }
 
 /* Compact minimalist timeline lines */
